[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/skills/fireball/FireballExplosion.gd" type="Script" id=1]
[ext_resource path="res://RGB_beca35af563247859e8f57a00880aaf4_Ground_SuperheatedRock_2k_e.jpg" type="Texture" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.411306, 1 )

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
params_depth_draw_mode = 3
albedo_texture = ExtResource( 2 )

[node name="FireballExplosion" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34112, 0 )
script = ExtResource( 1 )

[node name="fireball1" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball1"]

[node name="CollisionShape" type="CollisionShape" parent="fireball1/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball1"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball2" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball2"]

[node name="CollisionShape" type="CollisionShape" parent="fireball2/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball2"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball3" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball3"]

[node name="CollisionShape" type="CollisionShape" parent="fireball3/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball3"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball4" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball4"]

[node name="CollisionShape" type="CollisionShape" parent="fireball4/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball4"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball5" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball5"]

[node name="CollisionShape" type="CollisionShape" parent="fireball5/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball5"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball6" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball6"]

[node name="CollisionShape" type="CollisionShape" parent="fireball6/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball6"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball7" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball7"]

[node name="CollisionShape" type="CollisionShape" parent="fireball7/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball7"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball8" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball8"]

[node name="CollisionShape" type="CollisionShape" parent="fireball8/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball8"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball9" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball9"]

[node name="CollisionShape" type="CollisionShape" parent="fireball9/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball9"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball10" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball10"]

[node name="CollisionShape" type="CollisionShape" parent="fireball10/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball10"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball11" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball11"]

[node name="CollisionShape" type="CollisionShape" parent="fireball11/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball11"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball12" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball12"]

[node name="CollisionShape" type="CollisionShape" parent="fireball12/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball12"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball13" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball13"]

[node name="CollisionShape" type="CollisionShape" parent="fireball13/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball13"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball14" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball14"]

[node name="CollisionShape" type="CollisionShape" parent="fireball14/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball14"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball15" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball15"]

[node name="CollisionShape" type="CollisionShape" parent="fireball15/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball15"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball16" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball16"]

[node name="CollisionShape" type="CollisionShape" parent="fireball16/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball16"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball17" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball17"]

[node name="CollisionShape" type="CollisionShape" parent="fireball17/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball17"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball18" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball18"]

[node name="CollisionShape" type="CollisionShape" parent="fireball18/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball18"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball19" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball19"]

[node name="CollisionShape" type="CollisionShape" parent="fireball19/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball19"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball20" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball20"]

[node name="CollisionShape" type="CollisionShape" parent="fireball20/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball20"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball21" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball21"]

[node name="CollisionShape" type="CollisionShape" parent="fireball21/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball21"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball22" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball22"]

[node name="CollisionShape" type="CollisionShape" parent="fireball22/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball22"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball23" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball23"]

[node name="CollisionShape" type="CollisionShape" parent="fireball23/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball23"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball24" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball24"]

[node name="CollisionShape" type="CollisionShape" parent="fireball24/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball24"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball25" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball25"]

[node name="CollisionShape" type="CollisionShape" parent="fireball25/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball25"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="fireball26" type="KinematicBody" parent="."]

[node name="Area" type="Area" parent="fireball26"]

[node name="CollisionShape" type="CollisionShape" parent="fireball26/Area"]
transform = Transform( 0.364324, 0, 0, 0, 1, 0, 0, 0, 0.23966, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="fireball26"]
transform = Transform( 0.370663, 0, 0, 0, 0.344074, 0, 0, 0, 0.368101, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="fireball1/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball2/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball3/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball4/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball5/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball6/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball7/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball8/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball9/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball10/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball11/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball12/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball13/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball14/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball15/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball16/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball17/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball18/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball19/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball20/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball21/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball22/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball23/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball24/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball25/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="fireball26/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
